--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/models/Aparatos.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^30.2.0",
     "node": "^25.1.0"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0"
   }
 }
